<?xml version="1.0" encoding="utf-8"?>
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EditorActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/category_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorAccent"
                        android:paddingTop="25dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/edit_pet_name"
                            android:hint="@string/hint_pet_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:paddingLeft="20dp"/>

                        <EditText
                            android:id="@+id/edit_pet_breed"
                            android:hint="@string/hint_pet_breed"
                            android:inputType="textCapWords"
                            style="@style/EditorFieldStyle"
                            android:paddingLeft="20dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/container_gender">

                    <TextView
                        android:text="@string/category_gender"
                        style="@style/CategoryStyle" />

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:orientation="vertical">
                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:paddingBottom="16dp"
                            android:spinnerMode="dropdown"
                            android:id="@+id/spinner_gender">
                        </Spinner>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/container_measurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        android:text="@string/category_measurement"
                        style="@style/CategoryStyle"
                        android:textSize="18dp"/>

                    <!-- Input fields -->
                    <RelativeLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:paddingLeft="4dp">

                        <!-- Weight field -->
                        <EditText
                            android:id="@+id/edit_pet_weight"
                            android:hint="@string/hint_pet_weight"
                            android:inputType="number"
                            style="@style/EditorFieldStyle"
                            android:textSize="18dp"/>

                        <!-- Units for weight (kg) -->
                        <TextView
                            android:id="@+id/label_weight_units"
                            android:text="@string/unit_pet_weight"
                            style="@style/EditorUnitsStyle"
                            android:textSize="18dp"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="95dp"
                        android:layout_height="30dp"
                        android:text="Height"
                        android:layout_marginTop="10dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Height in cms."
                        android:id="@+id/pet_height"/>
                    
                </LinearLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>